Update page header

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,144 +1,45 @@
 ---
 layout: default
 ---
+  
+<div class="wp-block-group alignfull hero-section has-white-color has-text-color has-background" style="background-color:#642580">
+    <div class="wp-block-group__inner-container">
+        <h1 class="alignwide has-text-align-center" style="text-align:center; color:#FFFFFF;">{{page.title}}</h1>
+        <p class="has-text-align-center"></p>
+        <div class="wp-block-columns alignwide">
+            <div class="wp-block-column">
+                <figure class="wp-block-image size-large"><img loading="lazy" width="560" height="373" src="../assets/images/anvil.bf1c36b-300x200.jpg" alt="" class="wp-image-770" srcset="../assets/images/anvil.bf1c36b-300x200.jpg 560w, ../assets/images/anvil.bf1c36b-300x200.jpg 300w" sizes="(max-width: 560px) 100vw, 560px"><figcaption>CoderDojo NYC, USA<br></figcaption></figure>
+            </div>
+            <div class="wp-block-column">
+                <figure class="wp-block-image size-large"><img loading="lazy" width="560" height="373" src="../assets/images/what-is.8a78caf.png" alt="" class="wp-image-753" srcset="../assets/images/what-is.8a78caf.png 560w, ../assets/images/what-is.8a78caf.png 300w" sizes="(max-width: 560px) 100vw, 560px"><figcaption>What is CoderDojo?</figcaption></figure>
+            </div>
+            <div class="wp-block-column">
+                <figure class="wp-block-image size-large"><img loading="lazy" width="560" height="373" src="../assets/images/nurnberg.9d10b96-300x200.jpg" alt="" class="wp-image-771" srcset="../assets/images/nurnberg.9d10b96-300x200.jpg 560w, ../assets/images/nurnberg.9d10b96-300x200.jpg 300w" sizes="(max-width: 560px) 100vw, 560px"><figcaption>CoderDojo Nürnberg, Germany</figcaption></figure>
+            </div>
+        </div>
+    </div>
+</div>
 
-{{ content }}
-
-<main id="main">
-
-    <article id="article" class="post-689 page type-page status-publish hentry">
+{{ content }} 
     
-        
-    <div class="wp-block-group alignfull hero-section has-white-color has-text-color has-background" style="background-color:#642580"><div class="wp-block-group__inner-container">
-    <h1 class="alignwide has-text-align-center">About Us</h1>
-    
-    
-    <p class="has-text-align-center"></p>
-    
-    
-    <div class="wp-block-columns alignwide">
-    <div class="wp-block-column">
-    <figure class="wp-block-image size-large"><img loading="lazy" width="560" height="373" src="https://coderdojokinsale.com/wp-content/uploads/2021/03/nurnberg.640e1c0.jpg" alt="" class="wp-image-770" srcset="https://coderdojokinsale.com/wp-content/uploads/2021/03/nurnberg.640e1c0.jpg 560w, https://coderdojokinsale.com/wp-content/uploads/2021/03/nurnberg.640e1c0-300x200.jpg 300w" sizes="(max-width: 560px) 100vw, 560px"><figcaption>CoderDojo NYC, USA<br></figcaption></figure>
+<div class="wp-block-group alignfull has-background" style="background-color:#f4f4f4">
+    <div class="wp-block-group__inner-container">
+        <h2 class="has-text-align-center" style="text-align:center;">Did You Know?</h2>
+        <h3 class="has-text-align-center" style="text-align:center;">CoderDojo Kinsale is volunteer lead</h3>
+        <p class="has-text-align-center"></p>
+        <div class="wp-block-columns alignwide">
+            <div class="wp-block-column card">
+                <figure class="wp-block-image size-large"><img loading="lazy" width="1024" height="538" src="https://coderdojokinsale.com/wp-content/uploads/2021/03/pixel-logo-1024x538.png" alt="" class="wp-image-4138" srcset="https://coderdojokinsale.com/wp-content/uploads/2021/03/pixel-logo-1024x538.png 1024w, https://coderdojokinsale.com/wp-content/uploads/2021/03/pixel-logo-300x158.png 300w, https://coderdojokinsale.com/wp-content/uploads/2021/03/pixel-logo-768x404.png 768w, https://coderdojokinsale.com/wp-content/uploads/2021/03/pixel-logo.png 1075w" sizes="(max-width: 1024px) 100vw, 1024px"></figure>
+                <p class="has-text-align-center has-black-color has-text-color">CoderDojo Kinsale is one of the oldest Dojos in the world.</p>
+            </div>
+            <div class="wp-block-column card">
+                <figure class="wp-block-image size-large"><img src="https://coderdojokinsale.com/wp-content/uploads/2021/03/nanonaught-painting-1024x538.png" alt="" class="wp-image-4152"></figure>
+                <p class="has-text-align-center has-black-color has-text-color">You don’t have to have any experience to join.</p>
+            </div>
+            <div class="wp-block-column card">
+                <figure class="wp-block-image size-large"><img src="https://coderdojokinsale.com/wp-content/uploads/2021/03/nanonaught-cowboy-1024x538.png" alt="" class="wp-image-4132"></figure>
+                <p class="has-text-align-center has-black-color has-text-color">Ninjas learn from each other and it is a great way to make friends.</p>
+            </div>
+        </div>
     </div>
-    
-    
-    <div class="wp-block-column">
-    <figure class="wp-block-image size-large"><img loading="lazy" width="560" height="373" src="https://coderdojokinsale.com/wp-content/uploads/2021/03/what-is.8a78caf.png" alt="" class="wp-image-753" srcset="https://coderdojokinsale.com/wp-content/uploads/2021/03/what-is.8a78caf.png 560w, https://coderdojokinsale.com/wp-content/uploads/2021/03/what-is.8a78caf-300x200.png 300w" sizes="(max-width: 560px) 100vw, 560px"><figcaption>What is CoderDojo?</figcaption></figure>
-    </div>
-    
-    
-    <div class="wp-block-column">
-    <figure class="wp-block-image size-large"><img loading="lazy" width="560" height="373" src="https://coderdojokinsale.com/wp-content/uploads/2021/03/nyc.50fdfad.jpg" alt="" class="wp-image-771" srcset="https://coderdojokinsale.com/wp-content/uploads/2021/03/nyc.50fdfad.jpg 560w, https://coderdojokinsale.com/wp-content/uploads/2021/03/nyc.50fdfad-300x200.jpg 300w" sizes="(max-width: 560px) 100vw, 560px"><figcaption>CoderDojo Nürnberg, Germany</figcaption></figure>
-    </div>
-    </div>
-    </div></div>
-    
-    
-    <div class="wp-block-group alignfull has-white-background-color has-background"><div class="wp-block-group__inner-container">
-    <p>CoderDojo is a free computer club for kids, which started in Cork in 2011 and grew quickly into a global community of over 1000 clubs operating in 65 countries. Starting 2012, CoderDojo Kinsale has brought the global good vibes to young coders in the Kinsale area and beyond. We work within communities to provide free computer workshops in fun learning environments – breaking down barriers, challenging social and economic stereotypes, and empowering youth to shape their world through code.</p>
-    </div></div>
-    
-    
-    <div class="wp-block-group alignfull has-white-background-color has-background"><div class="wp-block-group__inner-container">
-    <div class="wp-block-columns alignwide reverse-columns-mobile">
-    <div class="wp-block-column">
-    <h2>What is CoderDojo?</h2>
-    
-    
-    <p>CoderDojo is a free computer club for kids, which started in Ireland in 2011 and grew quickly into a global community of over 1000 clubs operating in 65 countries.</p>
-    
-    
-    <div class="wp-block-buttons">
-    <div class="wp-block-button"><a class="wp-block-button__link has-background" href="/what-is-coderdojo/" style="background-color:#642580">Read More</a></div>
-    </div>
-    </div>
-    
-    
-    <div class="wp-block-column">
-    <div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" width="841" height="601" src="https://coderdojokinsale.com/wp-content/uploads/2021/03/Learn_From_Home_3.png" alt="" class="wp-image-773" srcset="https://coderdojokinsale.com/wp-content/uploads/2021/03/Learn_From_Home_3.png 841w, https://coderdojokinsale.com/wp-content/uploads/2021/03/Learn_From_Home_3-300x214.png 300w, https://coderdojokinsale.com/wp-content/uploads/2021/03/Learn_From_Home_3-768x549.png 768w" sizes="(max-width: 841px) 100vw, 841px"></figure></div>
-    </div>
-    </div>
-    </div></div>
-    
-    
-    <div class="wp-block-group alignfull has-white-background-color has-background"><div class="wp-block-group__inner-container">
-    <div class="wp-block-columns alignwide">
-    <div class="wp-block-column">
-    <div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" width="1024" height="550" src="https://coderdojokinsale.com/wp-content/uploads/2021/03/mentors-1024x550.png" alt="" class="wp-image-775" srcset="https://coderdojokinsale.com/wp-content/uploads/2021/03/mentors-1024x550.png 1024w, https://coderdojokinsale.com/wp-content/uploads/2021/03/mentors-300x161.png 300w, https://coderdojokinsale.com/wp-content/uploads/2021/03/mentors-768x412.png 768w, https://coderdojokinsale.com/wp-content/uploads/2021/03/mentors.png 1075w" sizes="(max-width: 1024px) 100vw, 1024px"></figure></div>
-    </div>
-    
-    
-    <div class="wp-block-column">
-    <h2>Meet Our Mentors</h2>
-    
-    
-    <p>CoderDojo would not be possible without an amazing group of volunteers all over the world. Find out more about the volunteers that help run CoderDojo Kinsale.</p>
-    
-    
-    <div class="wp-block-buttons">
-    <div class="wp-block-button"><a class="wp-block-button__link has-background" href="/meet-our-mentors/" style="background-color:#41bac1">Read More</a></div>
-    </div>
-    </div>
-    </div>
-    </div></div>
-    
-    
-    <div class="wp-block-group alignfull has-white-background-color has-background"><div class="wp-block-group__inner-container">
-    <div class="wp-block-columns alignwide reverse-columns-mobile">
-    <div class="wp-block-column">
-    <h2>CoderDojo Mottos</h2>
-    
-    
-    <p>CoderDojo only has one rule, be cool! Apart from that, we have a few mottos that help engage Ninjas to learn and make friends.</p>
-    
-    
-    <div class="wp-block-buttons">
-    <div class="wp-block-button"><a class="wp-block-button__link has-background" href="/mottos" style="background-color:#ed684a">Read More</a></div>
-    </div>
-    </div>
-    
-    
-    <div class="wp-block-column">
-    <div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" width="841" height="601" src="https://coderdojokinsale.com/wp-content/uploads/2021/03/Zoom_Group.png" alt="" class="wp-image-774" srcset="https://coderdojokinsale.com/wp-content/uploads/2021/03/Zoom_Group.png 841w, https://coderdojokinsale.com/wp-content/uploads/2021/03/Zoom_Group-300x214.png 300w, https://coderdojokinsale.com/wp-content/uploads/2021/03/Zoom_Group-768x549.png 768w" sizes="(max-width: 841px) 100vw, 841px"></figure></div>
-    </div>
-    </div>
-    </div></div>
-    
-    
-    <div class="wp-block-group alignfull has-background" style="background-color:#f4f4f4"><div class="wp-block-group__inner-container">
-    <h2 class="has-text-align-center">Did You Know?</h2>
-    
-    
-    <h3 class="has-text-align-center">CoderDojo Kinsale is volunteer lead</h3>
-    
-    
-    <p class="has-text-align-center"></p>
-    
-    
-    <div class="wp-block-columns alignwide">
-    <div class="wp-block-column card">
-    <figure class="wp-block-image size-large"><img loading="lazy" width="1024" height="538" src="https://coderdojokinsale.com/wp-content/uploads/2021/03/pixel-logo-1024x538.png" alt="" class="wp-image-4138" srcset="https://coderdojokinsale.com/wp-content/uploads/2021/03/pixel-logo-1024x538.png 1024w, https://coderdojokinsale.com/wp-content/uploads/2021/03/pixel-logo-300x158.png 300w, https://coderdojokinsale.com/wp-content/uploads/2021/03/pixel-logo-768x404.png 768w, https://coderdojokinsale.com/wp-content/uploads/2021/03/pixel-logo.png 1075w" sizes="(max-width: 1024px) 100vw, 1024px"></figure>
-    
-    
-    <p class="has-text-align-center has-black-color has-text-color">CoderDojo Kinsale is one of the oldest Dojos in the world.</p>
-    </div>
-    
-    
-    <div class="wp-block-column card">
-    <figure class="wp-block-image size-large"><img src="https://coderdojokinsale.com/wp-content/uploads/2021/03/nanonaught-painting-1024x538.png" alt="" class="wp-image-4152"></figure>
-    
-    
-    <p class="has-text-align-center has-black-color has-text-color">You don’t have to have any experience to join.</p>
-    </div>
-    
-    
-    <div class="wp-block-column card">
-    <figure class="wp-block-image size-large"><img src="https://coderdojokinsale.com/wp-content/uploads/2021/03/nanonaught-cowboy-1024x538.png" alt="" class="wp-image-4132"></figure>
-    
-    
-    <p class="has-text-align-center has-black-color has-text-color">Ninjas learn from each other and it is a great way to make friends.</p>
-    </div>
-    </div>
-    </div></div>
-    
-    </article></main>
+</div>
