--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
         <div id="footer-social" class="social-icon">
             <div class="menu-social-links-container">
                 <ul id="footer-social-menu" class="social-links">
-                    {% for item in site.data.navigation-menus.social-menu %}
+                    {% for item in site.data.navigation_menus.social_menu %}
                     <li class="menu-item menu-item-type-custom menu-item-object-custom">
                         <a href="{{ item.url }}"><p>{{ item.title }}</p></a>
                     </li>
@@ -15,10 +15,10 @@
         </div>
         <div id="footer-menus">
             <div class="footer-menu">
-                <h2 class="footer-menu-title">{{ site.data.navigation-menus.footer-menu-one-title }}</h2>
+                <h2 class="footer-menu-title">{{ site.data.navigation_menus.footer_menu_one_title }}</h2>
                 <div class="menu-about-us-container">
                     <ul id="footer-menu-one" class="footer-menu">
-                        {% for item in site.data.navigation-menus.footer-menu-one %}
+                        {% for item in site.data.navigation_menus.footer_menu_one %}
                         <li class="menu-item menu-item-type-custom menu-item-object-custom">
                             <a href="{{ item.url }}">{{ item.title }}</a>
                         </li>
@@ -27,10 +27,10 @@
                 </div>    
             </div>
             <div class="footer-menu">
-                <h2 class="footer-menu-title">{{ site.data.navigation-menus.footer-menu-two-title }}</h2>
+                <h2 class="footer-menu-title">{{ site.data.navigation_menus.footer_menu_two_title }}</h2>
                 <div class="menu-about-us-container">
                     <ul id="footer-menu-two" class="footer-menu">
-                        {% for item in site.data.navigation-menus.footer-menu-two %}
+                        {% for item in site.data.navigation_menus.footer_menu_two %}
                         <li class="menu-item menu-item-type-custom menu-item-object-custom">
                             <a href="{{ item.url }}">{{ item.title }}</a>
                         </li>
@@ -39,10 +39,10 @@
                 </div>    
             </div>
             <div class="footer-menu">
-                <h2 class="footer-menu-title">{{ site.data.navigation-menus.footer-menu-three-title }}</h2>
+                <h2 class="footer-menu-title">{{ site.data.navigation_menus.footer_menu_three_title }}</h2>
                 <div class="menu-about-us-container">
                     <ul id="footer-menu-two" class="footer-menu">
-                        {% for item in site.data.navigation-menus.footer-menu-three %}
+                        {% for item in site.data.navigation_menus.footer_menu_three %}
                         <li class="menu-item menu-item-type-custom menu-item-object-custom">
                             <a href="{{ item.url }}">{{ item.title }}</a>
                         </li>
@@ -51,10 +51,10 @@
                 </div>    
             </div>
             <div class="footer-menu">
-                <h2 class="footer-menu-title">{{ site.data.navigation-menus.footer-menu-four-title }}</h2>
+                <h2 class="footer-menu-title">{{ site.data.navigation_menus.footer_menu_four_title }}</h2>
                 <div class="menu-about-us-container">
                     <ul id="footer-menu-two" class="footer-menu">
-                        {% for item in site.data.navigation-menus.footer-menu-four %}
+                        {% for item in site.data.navigation_menus.footer_menu_four %}
                         <li class="menu-item menu-item-type-custom menu-item-object-custom">
                             <a href="{{ item.url }}">{{ item.title }}</a>
                         </li>
