--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
         {% include site-logo.html %}
         <nav id="desktop-navigation" class="menu-desktop-navigation-menu-container">
             <ul id="desktop-menu" class="header-menu">
-                {% for item in site.data.navigation-menus.primary-menu %}
+                {% for item in site.data.navigation_menus.primary_menu %}
                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-447">
                     <a href="{{ item.url }}">{{ item.title }}</a>
                 </li>
