--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,4 +2,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
+    <link rel="stylesheet" href="{{ "/assets/steps.css" | relative_url }}">
+    <script src="{{ "/assets/js/index.js" | relative_url }}" type="text/javascript"></script>
+    <script src="{{ "/assets/js/steps.js" | relative_url }}" type="text/javascript"></script>
+    <script src="{{ "/assets/js/scratch.js" | relative_url }}" type="text/javascript"></script>
 </head>
