--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,26 +1,12 @@
 ---
 layout: default
 ---
-  
-<div class="wp-block-group alignfull hero-section has-white-color has-text-color has-background" style="background-color:#642580">
+
+<div class="wp-block-group alignfull has-background">
     <div class="wp-block-group__inner-container">
-        <h1 class="alignwide has-text-align-center" style="text-align:center; color:#FFFFFF;">{{page.title}}</h1>
-        <p class="has-text-align-center"></p>
-        <div class="wp-block-columns alignwide">
-            <div class="wp-block-column">
-                <figure class="wp-block-image size-large"><img loading="lazy" width="560" height="373" src="../assets/images/anvil.bf1c36b-300x200.jpg" alt="" class="wp-image-770" srcset="../assets/images/anvil.bf1c36b-300x200.jpg 560w, ../assets/images/anvil.bf1c36b-300x200.jpg 300w" sizes="(max-width: 560px) 100vw, 560px"><figcaption>CoderDojo NYC, USA<br></figcaption></figure>
-            </div>
-            <div class="wp-block-column">
-                <figure class="wp-block-image size-large"><img loading="lazy" width="560" height="373" src="../assets/images/what-is.8a78caf.png" alt="" class="wp-image-753" srcset="../assets/images/what-is.8a78caf.png 560w, ../assets/images/what-is.8a78caf.png 300w" sizes="(max-width: 560px) 100vw, 560px"><figcaption>What is CoderDojo?</figcaption></figure>
-            </div>
-            <div class="wp-block-column">
-                <figure class="wp-block-image size-large"><img loading="lazy" width="560" height="373" src="../assets/images/nurnberg.9d10b96-300x200.jpg" alt="" class="wp-image-771" srcset="../assets/images/nurnberg.9d10b96-300x200.jpg 560w, ../assets/images/nurnberg.9d10b96-300x200.jpg 300w" sizes="(max-width: 560px) 100vw, 560px"><figcaption>CoderDojo Nürnberg, Germany</figcaption></figure>
-            </div>
-        </div>
+        {{ content }} 
     </div>
 </div>
-
-{{ content }} 
     
 <div class="wp-block-group alignfull has-background" style="background-color:#f4f4f4">
     <div class="wp-block-group__inner-container">
